--- a/PA/index.html
+++ b/PA/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="bg-light text-center container d-flex flex-wrap">
+<body class="bg-success">
+    <div class="bg-light text-center container d-flex flex-wrap mt-3 p-3 rounded-3">
 
-        <div class="mx-3 flex-fill mb-5">
+        <div class="mx-3 flex-fill mb-5 border border-2 rounded-3 p-3">
             <h1>P.A</h1>
+            <p class="mb-5">Progressão Aritmética Geral</p>
             <label for="inicial" class="form-label fs-5">Termo inicial</label>
             <input id="inicial" type="number" class="form-control">
             <br>
@@ -25,12 +26,12 @@
             <label for="termo" class="form-label fs-5">Termo final</label>
             <input id="termo" type="number" class="form-control">
             <br>
-            <button onclick="PA()" class="btn btn-success">Resultado</button>
-            <hr>
+            <button onclick="PA()" class="btn btn-outline-success">Resultado</button>
         </div>
 
-        <div class="mx-3 flex-fill mb-5">
+        <div class="mx-3 flex-fill mb-5 border border-2 rounded-3 p-3">
             <h1>P.A soma</h1>
+            <p class="mb-5">Soma da Progressão Aritimética</p>
             <label for="inicialT" class="form-label fs-5">Primeiro termo</label>
             <input id="inicialT" type="number" class="form-control">
             <br>
@@ -40,20 +41,19 @@
             <label for="totalT" class="form-label fs-5">Total de termos</label>
             <input id="totalT" type="number" class="form-control">
             <br>
-            <button onclick="PAs()" class="btn btn-success">Resultado</button>
-            <hr>
+            <button onclick="PAs()" class="btn btn-outline-success">Resultado</button>
         </div>
 
-        <div class="mx-3 flex-fill mb-5">
+        <div class="mx-3 flex-fill mb-5 border border-2 rounded-3 p-3">
             <h1>P.A médio</h1>
+            <p class="mb-5">Progressão Aritimética para tirar a Média</p>
             <label for="primeiroT" class="form-label fs-5">Primeiro termo</label>
             <input id="primeiroT" type="number" class="form-control">
             <br>
             <label for="ultimoT2" class="form-label fs-5">Ultimo valor da P.A</label>
             <input id="ultimoT2" type="number" class="form-control">
             <br>
-            <button onclick="PAm()" class="btn btn-success">Resultado</button>
-            <hr>
+            <button onclick="PAm()" class="btn btn-outline-success">Resultado</button>
         </div>
     </div>
     <script>
@@ -76,7 +76,7 @@
             var totalT = parseInt(document.getElementById('totalT').value);
             var pa = '';
 
-            result = [(inicialT + ultimoT) * totalT] /2; 
+            result = [(inicialT + ultimoT) * totalT] / 2;
             document.write(result);
         }
 
