--- a/PA/index.html
+++ b/PA/index.html
@@ -12,50 +12,54 @@
 </head>
 
 <body class="bg-success">
-    <div class="bg-light text-center container d-flex flex-wrap mt-3 p-3 rounded-3">
+    <div class="text-center container d-flex flex-wrap mt-3 p-3 rounded-3">
 
-        <div class="mx-3 flex-fill mb-5 border border-2 rounded-3 p-3">
+        <div class="bg-light mx-3 flex-fill mb-5 rounded-3 py-5 px-3">
             <h1>P.A</h1>
             <p class="mb-5">Progressão Aritmética Geral</p>
-            <label for="inicial" class="form-label fs-5">Termo inicial</label>
+            <label for="inicial" class="form-label fs-5">Valor do Termo inicial</label>
             <input id="inicial" type="number" class="form-control">
             <br>
-            <label for="razao" class="form-label fs-5">Razão da P.A</label>
+            <label for="razao" class="form-label fs-5">Razão</label>
             <input id="razao" type="number" class="form-control">
             <br>
-            <label for="termo" class="form-label fs-5">Termo final</label>
+            <label for="termo" class="form-label fs-5">Valor do Último Termo</label>
             <input id="termo" type="number" class="form-control">
             <br>
             <button onclick="PA()" class="btn btn-outline-success">Resultado</button>
         </div>
 
-        <div class="mx-3 flex-fill mb-5 border border-2 rounded-3 p-3">
+        <div class="bg-light mx-3 flex-fill mb-5 rounded-3 py-5 px-3">
             <h1>P.A soma</h1>
             <p class="mb-5">Soma da Progressão Aritimética</p>
-            <label for="inicialT" class="form-label fs-5">Primeiro termo</label>
+            <label for="inicialT" class="form-label fs-5">Valor do Termo inicial</label>
             <input id="inicialT" type="number" class="form-control">
             <br>
-            <label for="ultimoT" class="form-label fs-5">Ultimo valor da P.A</label>
+            <label for="ultimoT" class="form-label fs-5">Valor do Último valor</label>
             <input id="ultimoT" type="number" class="form-control">
             <br>
-            <label for="totalT" class="form-label fs-5">Total de termos</label>
+            <label for="totalT" class="form-label fs-5">Quantidade Total de termos</label>
             <input id="totalT" type="number" class="form-control">
             <br>
             <button onclick="PAs()" class="btn btn-outline-success">Resultado</button>
         </div>
 
-        <div class="mx-3 flex-fill mb-5 border border-2 rounded-3 p-3">
+        <div class="bg-light mx-3 flex-fill mb-5 rounded-3 py-5 px-3">
             <h1>P.A médio</h1>
             <p class="mb-5">Progressão Aritimética para tirar a Média</p>
-            <label for="primeiroT" class="form-label fs-5">Primeiro termo</label>
+            <label for="primeiroT" class="form-label fs-5">Valor do Primeiro termo</label>
             <input id="primeiroT" type="number" class="form-control">
             <br>
-            <label for="ultimoT2" class="form-label fs-5">Ultimo valor da P.A</label>
+            <label for="ultimoT2" class="form-label fs-5">Valor do Ultimo Termo</label>
             <input id="ultimoT2" type="number" class="form-control">
             <br>
             <button onclick="PAm()" class="btn btn-outline-success">Resultado</button>
         </div>
     </div>
+    <footer class="bg-light p-3 mt-3">
+        <p>&copy;Copyright</p>
+        <p>por <strong>Tiago Aguiar</strong></p>
+    </footer>
     <script>
         function PA() {
             var valor = parseInt(document.getElementById('inicial').value);
@@ -67,7 +71,7 @@
                 pa += "<p>Termo " + count + " = " + valor + "</p>";
                 valor += razao;
             }
-            document.write(pa);
+            document.write("<h1>" + pa + "</h1>");
         }
 
         function PAs() {
@@ -77,7 +81,7 @@
             var pa = '';
 
             result = [(inicialT + ultimoT) * totalT] / 2;
-            document.write(result);
+            document.write("<h1>" + result + "</h1>");
         }
 
         function PAm() {
@@ -86,9 +90,10 @@
             var pa = '';
 
             result = (primeiroT + ultimoT) / 2;
-            document.write(result);
+            document.write("<h1>" + result + "</h1>");
         }
     </script>
+
 </body>
 
 </html>
